# gb-book

./: .gitignore  README.md
book/: 01-refresher.md  02-cpu-specs.md  03-project-setup.md  04-cpu-setup.md  05-opcode-setup.md  06-increment-decrement.md  07-load-instructions.md  08-bitwise-instructions.md  09-stack.md  10-cb-prefix.md  11-final-misc.md  12-memory-bus.md  13-desktop-setup.md  14-wasm-setup.md  15-cartridge-rom.md  16-video-introduction.md  17-tiles.md  18-tile-maps.md  19-ppu-modes.md  20-interrupts.md  21-control-registers.md  22-constructing-background.md  23-debugger.md  24-background-viewport.md  25-window-layer.md  26-input.md  27-oam.md  28-sprite-layer.md  29-wram.md  30-cpu-timer.md  31-header.md  32-ext-ram.md  33-mbc1.md  34-mbc2.md  35-mbc3.md  36-mbc5.md  37-render-scanline.md  38-battery-saves.md
book/img/: 25-scrolling.avif  25-scrolling.webm
book/scripts/: inheritance.uml
code/core/: Cargo.toml
code/core/src/: bus.rs  io.rs  lib.rs  timer.rs  utils.rs  wram.rs
code/core/src/cart/: mod.rs  rtc.rs
code/core/src/cpu/: mod.rs  opcodes.rs
code/core/src/ppu/: mod.rs  modes.rs  sprite.rs  tile.rs
code/desktop/: Cargo.toml
code/desktop/src/: debug.rs  main.rs
code/html/: index.html  index.js
code/wasm/: Cargo.toml
code/wasm/src/: lib.rs
